<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Misc title-->
    <string name="app_name">ProjetFinal</string>
    <string name="main_title">ProjetFinal</string>
    <string name="action_settings">Options</string>

    <!--Main Activity-->
    <string name="scanner">Scanner Produit</string>
    <string name="addProduct">+ produit</string>
    <string name="total">Total: </string>
    <string name="pay">Payer</string>
    <string name="transactionSave">Sauvegarde de la transaction...</string>
    <string name="menu_productsCreate">Création des produits...</string>
    <string name="menu_productsClear">Produits supprimés.</string>
    <string name="menu_orderCreate">Création d\'une commande...</string>
    <string name="dialog_payer">Payer les produits</string>

    <!--Menu-->
    <string name="action_create_prod">Créer Produits</string>
    <string name="action_clear_prod">Vider Produits</string>
    <string name="action_create_order">Créer Commandes</string>
    <string name="action_manageDiscounts">Gérer les rabais</string>

    <!--Payment Dialog-->
    <string name="money_100$">100$:</string>
    <string name="money_50$">50$:</string>
    <string name="money_20$">20$:</string>
    <string name="money_10$">10$:</string>
    <string name="money_5$">5$:</string>
    <string name="money_2$">2$:</string>
    <string name="money_1$">1$:</string>
    <string name="money_25c">25c:</string>
    <string name="money_10c">10c:</string>
    <string name="money_5c">5c:</string>
    <string name="money_1c">1c:</string>


    <!--Add Product Dialog-->
    <string name="addProd_prodName">Nom du produit:</string>
    <string name="addProd_prodDesc">Description:</string>
    <string name="addProd_prodPrice">Prix:</string>
    <string name="addProd_prodBarCode">Code Barre:</string>
    <string name="addProd_btnAdd">Ajouter</string>
    <string name="addProd_btnCancel">Annuler</string>
    <string name="addProd_title">Ajouter un produit</string>

    <!--List-->
    <string name="listItem_prodName">Produit</string>
    <string name="listItem_prodQty">Quantité</string>
    <string name="listItem_shownQty">Quantité: </string>
    <string name="listItem_seuil">Seuil: </string>

    <!--Discount Dialog-->
    <string name="discountDialog_title">Gestion des rabais</string>
    <string name="totalToPay">total</string>

    <!--Discount : Rabais 2 pour 1-->
    <string name="rabais2pour1">Rabais 2 pour 1</string>
    <string name="rabaisProduitGratuit">Produit Gratuit</string>
    <string name="rabaisSeuilSansTaxes">Seuil sans taxes</string>
    <string name="rabais2pour1_inputBarCode">Ajouter un produit par code barre...</string>
    <string name="rabais2pour1_add">+</string>
    <string name="rabais2pour1_alreadyThere">Ce produit est deja en 2 pour 1.</string>

    <!--Discount : Rabais Produit Gratuit-->
    <string name="rabaisProduitGratuit_inputBarCode">Ajouter un produit par code barre...</string>
    <string name="rabaisProduitGratuit_Seuil">Seuil...</string>
    <string name="rabaisProduitGratuit_alreadyThere">Ce produit a déjà un rabais de ce type.</string>

    <!--Misc-->
    <string name="back">Retour</string>
    <string name="productNotFound">Produit non trouvé.</string>
    <string name="no_tax_amount">Seuil sans taxes : </string>
    <string name="add_tax_free_amount">Ajouter le seuil sans taxes</string>
    <string name="tax_freeAmount">Seuil Sans taxes</string>
    <string name="tax_freeIsnow">Le montant sans taxes est maintenant : </string>
    <string name="need_something_to_pay">Vous devez avoir des items avant de pouvoir payer.</string>
    <string name="no_change_to_give">Aucun change à redonner</string>
    <string name="action_manageCaisse">Gérer la caisse</string>

    <!--Facture-->
    <string name="receipt_receiptName">FACTURE</string>
    <string name="receipt_2For1">2 Produit en 2 pour 1</string>
    <string name="receipt_freeProd">Produit gratuit par trache de </string>
    <string name="receipt_totalWithoutTaxes">Total sans taxes: </string>
    <string name="receipt_free">(Gratuit)</string>
    <string name="caisse_manager">État de la caisse</string>
    <string name="invalid_product_info">Produit invalide, vérifier que les champs ne sont pas vide et que les données soit exactes.</string>
    <string name="invalid_product_info_barcodeNot13Digits">Le code bare doit être de 13 chiffres</string>
    <string name="not_enought_money">Pas assez d\'argent ajouté....  montant requis : </string>
    <string name="amount_given"> Montant donné : </string>

</resources>
