<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#000080"
            android:text="@string/addProd_prodBarCode"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:inputType="number"
            android:hint="@string/rabais2pour1_inputBarCode"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:id="@+id/rabais2pour1_codeBarre"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/rabais2pour1_add"
            android:id="@+id/rabais2pour1_btn_add"
            android:background="@drawable/button2"/>

    </LinearLayout>
    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->
            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lsv_2pour1_items">

            </ListView>
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_marginLeft="250dp"
                android:text="@string/back"
                android:id="@+id/rabais2pour1_btn_back"/>
        </LinearLayout>

</LinearLayout>